# python-robot-reference

./: .coveragerc  .gitignore  Makefile  README.md  index.html  log.html  output.xml  pyproject.toml  report.html  requirements.txt
.github/workflows/: build.yml
robot/: log.html  output.xml  report.html
src/: calculator.py
src/levelup/: __main__.py  character.py  controller.py  direction.py  game.py  game_controller.py  map.py  position.py  ui.py
test_results/: index.html
tests/: character_double.py  fake_character.py  fake_map.py  map_double.py  test-acceptance.rst  test_calculator.py  test_character.py  test_game_controller.py  test_map.py  test_position.py
tests/robot/: CalculatorLibrary.py  CreateCharacterLibrary.py  GameControllerLibrary.py  MoveLibrary.py  StartGameLibrary.py  create_character.robot  data_driven.robot  gherkin.robot  move.robot  start_game.robot
