[tool.poetry]
name = "python-reference-app"
version = "0.1.0"
description = "A simple calculator application"
authors = ["JP White <jpwhite3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
robotframework = "^5.0"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
docutils = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
