[tool.poetry]
name = "levelup"
version = "0.1.0"
description = "A simple RPG implementation"
authors = ["JP White <jpwhite3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.1"
robotframework = "^5.0"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
docutils = "^0.18.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
